# zider-data

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  build.py  download.py  pyproject.toml
.github/workflows/: release.yml
LICENSES/: ATTRIBUTION-chinese-poetry.txt
tests/: test_aggregate.py  test_encoding.py  test_hsk.py  test_makemeahanzi_dictionary.py  test_makemeahanzi_graphics.py  test_mmah_dictionary.py  test_mmah_graphics.py
ziderdata/: aggregate.py  encoding.py  hsk.py  makemeahanzi_dictionary.py  makemeahanzi_graphics.py  mmah_dictionary.py  mmah_graphics.py  qian_jia_shi.py  schema.py  tang_poems.py
