[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zider-data"
version = "0.1.0"
description = "Data pipeline for the Zider Chinese character learning app"
requires-python = ">=3.9"
dependencies = [
    "opencc-python-reimplemented",
]

[tool.setuptools.packages.find]
include = ["ziderdata*"]
